# restinio

./: .gitattributes  .gitignore  .hgignore  .hgtags  .travis.yml  LICENSE  LICENSE.string-view-lite  LICENSE.zlib  README-NEW.md  README.md  externals.rb
dev/: CMakeLists.txt  Doxyfile  build.rb  default-clang-tidy-flags.cmake  issue_77.cpp  issue_77.rb  local-build.rb.example  mainpage.dox
dev/__async_chain_drafts/: async_chain_v001.hpp
dev/bench/: CMakeLists.txt  build_benches.rb
dev/bench/common/: cfg.hpp
dev/bench/single_handler/: CMakeLists.txt  main.cpp  prj.rb
dev/bench/single_handler_no_timer/: CMakeLists.txt  main.cpp  prj.rb
dev/bench/single_handler_so5_timers/: main.cpp  prj.rb
dev/benches/: CMakeLists.txt  build_benches.rb
dev/benches/common_args/: app_args.hpp
dev/benches/single_handler/: CMakeLists.txt  main.cpp  prj.rb
dev/benches/single_handler_no_timer/: CMakeLists.txt  main.cpp  prj.rb
dev/benches/single_handler_so5_timer/: CMakeLists.txt  main.cpp  prj.rb
dev/benches/single_handler_tick_timer/: CMakeLists.txt  main.cpp  prj.rb
dev/benches/single_handler_timertt_timer/: CMakeLists.txt  main.cpp  prj.rb
dev/cmake/: bench.cmake  code_coverage.cmake  cpp_standard.cmake  find_program_required.cmake  libcxx.cmake  link_atomic_if_necessary.cmake  link_threads_if_necessary.cmake  run_tests.bat  sample.cmake  testbench.cmake  unittest.cmake
dev/cmake/modules/: FindHTTP_Parser.cmake  FindPCRE.cmake  FindPCRE2.cmake  Findasio.cmake  Findexpected-lite.cmake  Findhttp-parser.cmake
dev/mxx/: open_ssl_libs.rb
dev/nodejs/http_parser/: CMakeLists.txt
dev/nodejs/llhttp/: CMakeLists.txt
dev/restinio/: CMakeLists.txt  all.hpp  asio_helper.rb  asio_include.hpp  asio_tick_timer_factory.hpp  asio_tick_timer_manager.hpp  asio_timer_factory.hpp  asio_timer_manager.hpp  boost_helper.rb  buffers.hpp  cast_to.hpp  chunked_encoding_info.hpp  chunked_input_info.hpp  common_types.hpp  compiler_features.hpp  connection_count_limiter.hpp  connection_handle.hpp  connection_state_listener.hpp  core.hpp  default_strands.hpp  detect_os.hpp  escape.hpp  exception.hpp  expected.hpp  http_headers.hpp  http_server.hpp  http_server.hpp.orig  http_server_run.hpp  incoming_http_msg_limits.hpp  io_context_wrapper.hpp  io_service_wrapper.hpp  ip_blocker.hpp  lib_finder.rb  message_builders.hpp  null_logger.hpp  null_mutex.hpp  null_timer_factory.hpp  null_timer_manager.hpp  open_ssl_libs.rb  openssl_find.rb  (+35 more)
dev/restinio-helpers/: CMakeLists.txt  cmd_line_args_helpers.hpp
dev/restinio/async_chain/: common.hpp  fixed_size.hpp  growable_size.hpp
dev/restinio/chained_handlers/: fixed_size.hpp  growable_size.hpp
dev/restinio/cmake/: restinio-config.cmake.in  target.cmake
dev/restinio/helpers/: easy_parser.hpp  file_upload.hpp  http_field_parser.hpp  multipart_body.hpp  string_algo.hpp
dev/restinio/impl/: acceptor.hpp  base64.hpp  base64_lut.inl  bitops.hpp  connection.hpp  connection_base.hpp  connection_handle.hpp  connection_settings.hpp  executor_wrapper.hpp  file_write_operation.hpp  fixed_buffer.hpp  header_helpers.hpp  include_fmtlib.hpp  ioctx_on_thread_pool.hpp  iosvc_on_thread_pool.hpp  os_posix.inl  os_unknown.inl  os_unknown.ipp  os_win.inl  os_win.ipp  overflow_controlled_integer_accumulator.hpp  parser_callbacks.inl  parser_callbacks.ipp  raw_resp_output_ctx.hpp  response_coordinator.hpp  sendfile_operation.hpp  sendfile_operation_default.inl  sendfile_operation_default.ipp  sendfile_operation_posix.inl  sendfile_operation_posix.ipp  sendfile_operation_win.inl  sendfile_operation_win.ipp  sha1.hpp  string_caseless_compare.hpp  timer_invocation_ctx.hpp  tls_socket.hpp  to_lower_lut.hpp  to_lower_lut.inl  utf8.hpp  websocket_parser.hpp  (+3 more)
dev/restinio/path2regex/: path2regex.hpp
dev/restinio/router/: boost_regex_engine.hpp  easy_parser_router.hpp  express.hpp  first_match.hpp  method_matcher.hpp  non_matched_request_handler.hpp  pcre2_regex_engine.hpp  pcre_regex_engine.hpp  std_regex_engine.hpp
dev/restinio/so5/: so_timer_factory.hpp  so_timer_manager.hpp
dev/restinio/sync_chain/: fixed_size.hpp  growable_size.hpp
dev/restinio/transformator/: zlib.hpp
dev/restinio/transforms/: zlib.hpp
dev/restinio/utils/: at_scope_exit.hpp  base64.hpp  base64_lut.inl  from_string.hpp  from_string_details.inl  from_string_details.ipp  lambda_traits.hpp  metaprogramming.hpp  percent_encoding.hpp  sha1.hpp  suppress_exceptions.hpp  tagged_scalar.hpp  tuple_algorithms.hpp  utf8_checker.hpp
dev/restinio/websocket/: message.hpp  websocket.hpp  ws_connection_handle.hpp  ws_message.hpp
dev/sample/: CMakeLists.txt  build_samples.rb  platform_specific_libs.rb  samples.dox
dev/sample/async_chained_handlers/: CMakeLists.txt  main.cpp
dev/sample/async_handling_with_sobjectizer/: CMakeLists.txt  app.hpp  main.cpp  prj.rb
dev/sample/async_handling_with_sobjectizer-old/: CMakeLists.txt  main.cpp
dev/sample/chained_handlers/: CMakeLists.txt  main.cpp  prj.rb
dev/sample/common/: ostream_logger.hpp
dev/sample/compression/: CMakeLists.txt  main.cpp  prj.rb
dev/sample/connection_state/: CMakeLists.txt  main.cpp  prj.rb
dev/sample/custom_buffer/: CMakeLists.txt  main.cpp  prj.rb
dev/sample/custom_http_methods/: CMakeLists.txt  main.cpp  prj.rb
dev/sample/decompression/: CMakeLists.txt  main.cpp  prj.rb  test_decompression.sh
dev/sample/easy_parser_router/: CMakeLists.txt  curl_examples.txt  main.cpp  new_book_1.txt  new_book_2.txt  prj.rb
dev/sample/express_router/: CMakeLists.txt  curl_examples.txt  main.cpp  prj.rb
dev/sample/express_router_tutorial/: CMakeLists.txt  main.cpp  prj.rb
dev/sample/extra_data_factory/: CMakeLists.txt  main.cpp  prj.rb
dev/sample/file_upload/: CMakeLists.txt  main.cpp  prj.rb
dev/sample/hello_world/: CMakeLists.txt  main.cpp  prj.rb
dev/sample/hello_world_basic/: CMakeLists.txt  main.cpp  prj.rb
dev/sample/hello_world_delayed/: CMakeLists.txt  main.cpp  prj.rb
dev/sample/hello_world_https/: dh512.pem  (+5 more)
dev/test/: CMakeLists.txt  build_tests.rb
vcpkg/: CMakeLists.txt  build_with_cmake.bat  build_with_cmake.sh
(+527 files in other folders)
